--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
         </div>
     </div>
 <script src="script.js"></script>    
+<footer>All write reserved -Rahul Kumar Ray</footer>
 </body>
 </html>
