--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         </div>
     </div>
 <script src="script.js"></script>    
-<footer>All write reserved -Rahul Kumar Ray</footer>
+<footer>All Right reserved -Rahul Kumar Ray</footer>
 </body>
 </html>
