--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
                     <p>Seconds</p>
                 </div>
             </div>
+
         </div>
+        <footer>All Right Reserved -Rahul Kumar Ray</footer>
     </div>
 <script src="script.js"></script>    
-<footer>All Right reserved -Rahul Kumar Ray</footer>
+
 </body>
 </html>
