--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
         </div>
-        <footer>All Right Reserved -Rahul Kumar Ray</footer>
+        <footer class="Right" >All Right Reserved -Rahul Kumar Ray</footer>
     </div>
 <script src="script.js"></script>    
 
